--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body{
-background-image: New folder (2)/14670615_937009956403358_7743268909331327491_n.jpg;
+background color: blue;
 width: 80%;
 margin: 0 auto;
 }
