--- a/Style.css
+++ b/Style.css
@@ -3,13 +3,13 @@ html {
 }
 
 body{
-background color: blue;
+background-color: crimson;
 width: 80%;
 margin: 0 auto;
 }
 
 header{
-
+background-color: brown;
 }
 
 head {
