--- a/Style.css
+++ b/Style.css
@@ -3,13 +3,15 @@ html {
 }
 
 body{
-background-color: crimson;
+background-color: rgb(173, 219, 247);
 width: 80%;
 margin: 0 auto;
 }
-
+img{
+    shape-outside: circle()
+}
 header{
-background-color: brown;
+background-color: rgb(272, 228, 121);
 }
 
 head {
@@ -19,7 +21,9 @@ nav {
 
 }
 article{
+    
 
 }
-image: 
+image { 
+height: 100;
 }
